# projecteuler

./: .gitignore  CMakeLists.txt  README.md  makefile  new.sh  readme.md  run.sh
include/: euler_utils.h
include/utils/: factorial.h  fib.h  math.h  primes.h  print_helper.h  print_helper.hpp  problem_list.h
scripts/: create_problem.sh
src/: euler_template.cpp  main.cpp
src/old_problems/: euler21.cpp  euler39.cpp  euler61.cpp  euler92.cpp  euler96.cpp  euler97.cpp
src/problems/: PROBLEM_TEMPLATE.txt  euler1.cpp  euler11.cpp  euler144.cpp  euler17.cpp  euler18.cpp  euler19.cpp  euler2.cpp  euler209.cpp  euler3.cpp  euler42.cpp  euler61.cpp  euler92.cpp  euler96.cpp  problem_001.cpp  problem_002.cpp  problem_003.cpp  problem_004.cpp  problem_005.cpp  problem_006.cpp  problem_007.cpp  problem_008.cpp  problem_009.cpp  problem_010.cpp  problem_011.cpp  problem_012.cpp  problem_013.cpp  problem_014.cpp  problem_015.cpp  problem_016.cpp  problem_017.cpp  problem_018.cpp  problem_019.cpp  problem_020.cpp  problem_021.cpp  problem_022.cpp  problem_023.cpp  problem_024.cpp  problem_025.cpp  problem_026.cpp  (+28 more)
utils/: CMakeLists.txt  factorial.cpp  primes.cpp
